--- a/examples/recurring-signup-ach/index.html
+++ b/examples/recurring-signup-ach/index.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="SecureSubmit PHP end-to-end payment example using tokenization.">
+    <meta name="description" content="SecureSubmit PHP end-to-end recurring payment with ACH example.">
     <meta name="author" content="Mark Hagan">
     <title>Simple Recurring Payment Signup Form Demo</title>
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
